--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ledmat</title>
     <script type="module">
-      import { main } from "./ledmat.mjs";
+      import { main } from "./main.mjs";
       window.main = main;
     </script>
   </head>
